Fix bug report dashboard not showing when admin select custom acl

--- a/view/adminhtml/web/css/source/_module.less
+++ b/view/adminhtml/web/css/source/_module.less
@@ -1,4 +1,4 @@
 
-li#menu-maqeplaza-reports-dashboard ~ li#menu-magento-backend-dashboard {
+li#menu-mageplaza-reports-dashboard ~ li#menu-magento-backend-dashboard {
   display: none;
 }
